--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,6 @@ navigation_footer:
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
   LinkedIn: https://www.linkedin.com/in/tan-zhi-qin-16314b126/
   GitHub: https://github.com/zhiqin1998
-  link: https://zhiqin.github.io
+  link: https://zhiqin1998.github.io
   Twitter: https://twitter.com/zhiqin1998
   RSS: /feed.xml
